welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: ')' expected but 'if' found.
    if ((nums(i)==6) && (nums(i+1==7)) {compteur7=compteur7+1}
    ^array667:7: error: ')' expected but '}' found.
    }
    ^